--- a/iTrusst/content_info.html
+++ b/iTrusst/content_info.html
@@ -1,10 +1,8 @@
 <div  class="block blockgrey">
     
-    <h2>Info</h2>
+    <h3>We study human action and decision control using ultrasound neuromodulation</h3>
     
     <p>
-        We study human action and decision control using ultrasound neuromodulation. <br> <br>
-
         We modulate behaviour and brain circuits to better grasp human cognition. Such an interventional approach is important for a causal understanding, and even more critical in a clinical context. Current neuromodulation techniques are either highly invasive, or restricted to the surface of the brain. In our lab we are working on a novel technique to overcome these limitations: focused transcranial ultrasound stimulation. <br> <br>
 
         We use this technique to study how we control our actions and decisions. Everyday, people urge themselves out of bed in the morning, decide to have yoghurt or toast for breakfast, stop for a red light on their way to work. Human cognition is characterised by a high degree of behavioural control. This ability relies on the critical contribution of a set of deep brain nuclei, including the basal ganglia and amygdala, and their interaction with prefrontal cortex. These circuits of human cognition are often affected in psychiatric and neurological disorders. To disentangle how the different parts of these circuits work together we combine non-invasive brain stimulation, including ultrasound, magnetic, and electric stimulation, with neuroimaging, such as fMRI and EEG, and computational analyses of behaviour.<br> <br>
