--- a/iTrusst/content_wg_practice_example_documentation.html
+++ b/iTrusst/content_wg_practice_example_documentation.html
@@ -13,45 +13,51 @@
     <li>Purpose</li>
     <li>Expert guidelines</li>
     <li>Stimulation protocols</li>
-    <li>Procedures</li>
-    <ol>
-        <li>Screening</li>
-        <li>Exclusion criteria</li>
-        <li>Monitoring adverse events</li>
+    <li>Procedures
         <ol>
-            <li>Online, short-term, and medium-term studies</li>
-            <li>Reporting adverse events</li>
+            <li>Screening</li>
+            <li>Exclusion criteria</li>
+            <li>Monitoring adverse events
+                <ol>
+                    <li>Online, short-term, and medium-term studies</li>
+                    <li>Reporting adverse events</li>
+                </ol>
+            </li>
         </ol>
-    </ol>
-    <li>Risk, safety and burden</li>
-    <ol>
-        <li>Assessment of risk, safety, and burden</li>
-        <li>Safety of ofline, short-term, and medium-term studies</li>
+    </li>
+    <li>Risk, safety and burden
         <ol>
-            <li>TUS studies</li>
-            <li>Studies combining different techniques</li>
+            <li>Assessment of risk, safety, and burden</li>
+            <li>Safety of ofline, short-term, and medium-term studies
+                <ol>
+                    <li>TUS studies</li>
+                    <li>Studies combining different techniques</li>
+                </ol>
+            </li>
         </ol>
-    </ol>
-    <li>Appendices</li>
-    <ol>
-        <li>Appendix A: supplementary information on TUS</li>
+    </li>
+    <li>Appendices
         <ol>
-            <li>Transcranial ultrasonic stimulation (TUS)</li>
-            <li>Mechanisms of neuromodulation by TUS</li>
-            <li>TUS paramateres</li>
-            <li>Online TUS</li>
-            <li>Short-term and medium-term TUS</li>
-            <li>Multifocal TUS</li>
+            <li>Appendix A: supplementary information on TUS
+                <ol>
+                    <li>Transcranial ultrasonic stimulation (TUS)</li>
+                    <li>Mechanisms of neuromodulation by TUS</li>
+                    <li>TUS paramateres</li>
+                    <li>Online TUS</li>
+                    <li>Short-term and medium-term TUS</li>
+                    <li>Multifocal TUS</li>
+                </ol>
+            </li>
+            <li>Appendix B: safety, risk, and burden assessment for NIBS
+                <ol>
+                    <li>Transcranial ultrasonic stimulation (TUS)</li>
+                    <li>Existing regulations and consensus on TUS safety</li>
+                    <li>Informed stepwise approach to TUS safety</li><li>Informed risk aversion</li>
+                    <li>Simulations for TUS</li>
+                </ol>
+            </li>
         </ol>
-        <li>Appendix B: safety, risk, and burden assessment for NIBS</li>
-        <ol>
-            <li>Transcranial ultrasonic stimulation (TUS)</li>
-            <li>Existing regulations and consensus on TUS safety</li>
-            <li>Informed stepwise approach to TUS safety</li>
-            <li>Informed risk aversion</li>
-            <li>Simulations for TUS</li>
-        </ol>
-    </ol>
+    </li>
     <li>References</li>
     <li>License</li>
 </ol>
