--- a/iTrusst/wg_equipment.html
+++ b/iTrusst/wg_equipment.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Workgroup - ITRUSTT</title>
+		<title>Working group - ITRUSTT</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
         <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
@@ -25,7 +25,7 @@
             <div id="main" class="wrapper style1">
                 <div class="container">
                     <header class="major">
-                        <h2>Workgroup: Equipment</h2>
+                        <h2>Working group: Equipment</h2>
                     </header>
 
                     <!-- Content -->
