--- a/iTrusst/header.html
+++ b/iTrusst/header.html
@@ -28,7 +28,7 @@
                     </li>
                     <li><a href="wg_open.html">Open</a></li>
                     <li><a href="wg_clinical.html">Clinical</a></li>
-                    <li><a href="wg_meetingmins.html">Meeting minutes</a></li>
+                    <li><a href="meetingmins.html">Meeting minutes</a></li>
                     
                 </ul>
             </li>
