--- a/iTrusst/content_meetingmins.html
+++ b/iTrusst/content_meetingmins.html
@@ -12,6 +12,9 @@
 <h3>table of contents</h3>
 <ul>
     <li>
+        <a href="content_meeting_april22">April 21, 2022</a>
+    </li>
+    <li>
         <a href="content_meeting_june21">June 17, 2021</a>
     </li>
 
