--- a/iTrusst/content_meetingmins.html
+++ b/iTrusst/content_meetingmins.html
@@ -12,23 +12,23 @@
 <h3>table of contents</h3>
 <ul>
     <li>
-        <a href="content_meeting_april22.html">April 21, 2022</a>
+        <a href="meeting_april22.html">April 21, 2022</a>
     </li>
     <li>
-        <a href="content_meeting_june21.html">June 17, 2021</a>
+        <a href="meeting_june21.html">June 17, 2021</a>
     </li>
 
     <li>
-        <a href="content_meeting_may21.html">May 20, 2021</a>
+        <a href="meeting_may21.html">May 20, 2021</a>
     </li>
     <li>
-        <a href="content_meeting_april21.html">April 15, 2021</a>
+        <a href="meeting_april21.html">April 15, 2021</a>
     </li>
     <li>
-        <a href="content_meeting_march21.html">March 18, 2021</a>
+        <a href="meeting_march21.html">March 18, 2021</a>
     </li>
     <li>
-        <a href="content_meeting_feb21.html">February 18, 2021</a>
+        <a href="meeting_feb21.html">February 18, 2021</a>
     </li>
     <li>
         <a href="content_meeting_jan21.html">January 21, 2021</a>
