--- a/iTrusst/content_index.html
+++ b/iTrusst/content_index.html
@@ -1,16 +1,15 @@
 <!-- Banner -->
-<!--
+
 <section id="banner">
     <div class="content">
         <header>
-            <h2>Cognitive Neuromodulation</h2>
-            <p>We study human action and decision control using ultrasound neuromodulation. <br> [Website under Construction]</p>
-        </header>
-        <span class="image"><img src="images/index1.jpg" alt="" /></span>
+            <h1 style="text-align: center; color: #6a3297; font-weight: bold"> Welcome to ITRUSST</h1>
+            <h2 style="text-align: center; color: #6a3297">International Transcranial Ultrasonic Stimulation Safety and Standards</h2>
+            <h3 style="text-align: center; color: black">We are an international consortium working together towards the safe and effective application of transcranial focused ultrasound for neuromodulation. ITRUSST aims to establish consensus on expert guides, guidelines, and standardization for this neuromodulatory technique.</h3> 
+        </header>  
     </div>
-    <a href="#one" class="goto-next scrolly">Next</a>
 </section>
--->
+
 
 <!-- Make a collage/gallery of people -->
 <div class="team">
