--- a/iTrusst/content_index.html
+++ b/iTrusst/content_index.html
@@ -1,22 +1,17 @@
 <!-- Banner -->
-
-<section id="banner">
-    <div class="content">
-        <header>
-            <h1 style="text-align: center; color: #6a3297; font-weight: bold"> Welcome to ITRUSST</h1>
-            <h2 style="text-align: center; color: #6a3297">International Transcranial Ultrasonic Stimulation Safety and Standards</h2>
+<!--<div class="content">-->
+        <header style="text-align: center">
+            <h1 style="color: #6a3297; font-weight: bold"> Welcome to ITRUSST</h1>
+            <h2 style="color: #6a3297">International Transcranial Ultrasonic Stimulation Safety and Standards</h2>
             <h3 style="text-align: center; color: black">We are an international consortium working together towards the safe and effective application of transcranial focused ultrasound for neuromodulation. ITRUSST aims to establish consensus on expert guides, guidelines, and standardization for this neuromodulatory technique.</h3> 
+            <a href="aboutus.html" class="button">Get to know us</a>
         </header>  
-    </div>
-</section>
-
-
+<br>
+    <!--</div> -->
 <!-- Make a collage/gallery of people -->
 <div class="team">
-    
     <!-- Make a 'list' of people -->
     <ul class="auto-grid" role="list">
-
         <!-------------
             NEW BUTTON
          ------------->
