--- a/iTrusst/content_wg_clinical.html
+++ b/iTrusst/content_wg_clinical.html
@@ -1,11 +1,12 @@
 <div  class="block blockgrey">
-    <i>
+    <h4>
     Purpose: To establish a clinical roadmap for transcranial ultrasonic stimulation, including guidelines for clinical trials but also a preclinical directions.
-    </i>
- </div>   
-    
+    </h4>
+</div>   
+<br><br>
 <div class="block blockorange">
-    <h3 style="color:white"> Chairmenship clinical working group</h3>
-    <b style="color:black"> Christopher Butler (chair)</b><p style="color:white"> University of Oxford, Imperial College London, United Kingdom</p>
+    <h3 style="color:black"> Chairmenship clinical working group</h3>
+    <b style="color:6a3297"> Christopher Butler (chair)</b><p style="color:white"> University of Oxford, Imperial College London, United Kingdom</p>
     
 </div>
+
