--- a/iTrusst/content_wg_equipment_recommendations.html
+++ b/iTrusst/content_wg_equipment_recommendations.html
@@ -1,19 +1,16 @@
-<h2>(Draft) Recommendations for acoustic output calibration, testing, and routine checks of equipment for transcranial focused ultrasound for neuromodulation</h2>
-
-<div  class="block blockgrey">
-    <a href="https://zenodo.org/record/5506632#.YlfoKS8Rq-g">DOI 10.5281/zenodo.5506632</a>
-</div>
-
+<h3>(Draft) Recommendations for acoustic output calibration, testing, and routine checks of equipment for transcranial focused ultrasound for neuromodulation</h3>
+<h2 style="color:#6a3297"><a href="https://zenodo.org/record/5506632#.YlfoKS8Rq-g">DOI 10.5281/zenodo.5506632</a></h2>
 
 <h3>Table of contents</h3>
-
-<ol>
-    <li>Background</li>
-    <li>Primary calibration</li>
-    <li>Secondary calibration / testing</li>
-    <li>Routine equipment checks</li>
-    <li>License</li>
-</ol>
+<h4>
+    <ol>
+        <li>Background</li>
+        <li>Primary calibration</li>
+        <li>Secondary calibration / testing</li>
+        <li>Routine equipment checks</li>
+        <li>License</li>
+    </ol>
+</h4>
 
 <h3>Background</h3>
 <p>
@@ -59,8 +56,8 @@
 
     Measurements made for REC need not have an absolute traceable calibration but must be stable and repeatable. Thus, an acoustic power meter, radiation force balance, or hydrophone does not need to demonstrate traceable calibration accuracy but must be temporally stable and provide the same test value output for the same AO applied. Measurements may be performed over a range of output settings but must encompass at least those typically used for treatment. Measurements do not have to be performed at the maximum possible output settings of the Equipment, as those settings may not be realistic for the intended clinical use and may shorten the lifetime of the transducer or other components of the Equipment. Other checks, such as measurement of transducer impedance, reflected electrical power, or transmitter voltage/power, are also suitable as quantifiable indicators of Equipment performance. Checks are preferably performed with the transducer coupled to water or other media with acoustic impedance properties similar to tissue. In-air measurements may be possible, but only at transmit levels approved by the Manufacturer. The testing recommendation does not preclude other checks using quantifiable, repeatable and AO relevant approaches such as laser displacement or high frequency microphones, as long as the Manufacturer has been consulted and approves of their use, or they are otherwise described in other external standards documents. Further guidance on performing Routine Equipment Checks is provided in the document ‘Recommendations for performing routine checks on equipment for transcranial focused ultrasound for neuromodulation’.<br> <br>
 </p>
-
-<h3>License</h3>
+<div  class="block blockgrey">
+    <h3>License</h3>
 <p>
     Copyright (c) 2021, ITRUSST All rights reserved.<br> <br>
     
@@ -69,5 +66,7 @@
 <img src="images/cc.png"/>
 
 <p>This work is licensed under a  <a href="https://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a></p>
+</div>
+
 
 
