--- a/iTrusst/content_wg_practice.html
+++ b/iTrusst/content_wg_practice.html
@@ -1,28 +1,29 @@
 <div  class="block blockgrey">
-    <i>
+    <h4>
     Purpose: To establish recommendations and guidelines for standardized practice, including a guide for beginners, best practices, lab setup, experimental design, and consideration of confounds.
-    </i>
+    </h4>
 </div>
 <br><br>
 
 <ul>
-    <li>-To have a first draft of a beginners recommendations/guide for TUS</li>
+    <li>* To have a first draft of a beginners recommendations/guide for TUS</li>
 </ul>
 
 <h3>1 year goals (06/2022)</h3>
 <ul>
-    <li>-Have a published guide for beginners</li>
+    <li>* Have a published guide for beginners</li>
 </ul>
 
-<h3>table of contents</h3>
+<h3>Table of contents</h3>
 <ul>
     <li>
-        <a href="content_documentation">example documentation</a>
+        <a href="content_documentation">Example standard operating procedure</a>
             </li>
 </ul>
+<br>
 
 <div class="block blockorange">
-    <h3 style="color:white"> Chairmenship practice working group</h3>
-    <b style="color:black"> Til Ole Bergmann (chair)</b><p style="color:white"> Johannes Gutenberg University Medical Center Mainz, Germany</p>
+    <h3 style="color:black"> Chairmenship practice working group</h3>
+    <b style="color:#6a3297"> Til Ole Bergmann (chair)</b><p style="color:white"> Johannes Gutenberg University Medical Center Mainz, Germany</p>
     
 </div>
