--- a/iTrusst/content_wg_practice_example_documentation.html
+++ b/iTrusst/content_wg_practice_example_documentation.html
@@ -1,15 +1,12 @@
-<h2>Example documentation</h2>
+<h3>Example standard operating procedure</h3><h2 style="color:#6a3297"><a href="https://zenodo.org/record/4751422#.YlftMy8Rplw">DOI 10.5281/zenodo.47514222</a></h2>
 <i>
     The following examples are provided ‘as is’ by the copyright holders as a supplementary resource. These examples do not necessarily reflect the consensus opinion of ITRUSST.
 </i>
-
-<div  class="block blockgrey">
-    <a href="https://zenodo.org/record/4751422#.YlftMy8Rplw"> Example standard operating procedure - Donders Institute: DOI 10.5281/zenodo.4751422</a>
-</div>
-
+<br><br>
 <h3>Table of contents</h3>
 
-<ol>
+<h4> 
+    <ol>
     <li>Purpose</li>
     <li>Expert guidelines</li>
     <li>Stimulation protocols</li>
@@ -61,6 +58,8 @@
     <li>References</li>
     <li>License</li>
 </ol>
+</h4>
+<br>
 
 <h3>1. Purpose</h3>
 <p>
@@ -77,11 +76,11 @@
     Stimulation protocols for TUS can be categorized by the duration and neurophysiological mechanisms of the effect (online, short-term, long-term). In a single study more than one stimulation protocol can be employed. Importantly, the nature of a study is always classified according to the effects of the study as a whole, not of individual stimulation protocols. For more information refer to appendix A. <br><br>
 
 <ul>
-    <li><b>online:</b> these protocols rely on immediate excitatory and inhibitory mechanisms that have only instantaneous effects (≤1 sec). Examples: pulse or burst TUS protocols (≤1 sec).</li>
-    <li><b>short-term:</b> these protocols rely on transient functional modulations of synaptic efficacy that have short-lasting effects (>1 sec, ≤3 hours). Examples: repetitive or patterned TUS (>1 sec).</li>
-    <li><b>medium-term:</b> these protocols rely on slow but transient modulations of synaptic efficacy that have medium-term effects (>3 hours, ≤1 week). These protocols typically capitalize upon physiological mechanisms of plasticity with tailored parameters or aim to induce cumulative effects by repeating sessions.</li>
-    <li><b>long-term:</b> these protocols rely on slow structural modulations of synaptic function <b>that have long-lasting effects (>1 week).**</b> These stimulation protocols always entail repeated sessions (e.g. daily) over a prolonged period (e.g. weeks) with typically high-quantity, high-intensity and/or high-frequency pulse delivery. </li>  
-    <li><b>other:</b> these protocols do not meet any of the above criteria and/or the effects are*** not yet well-known. In general, the procedures for long-term stimulation protocols apply, except if all stimulation parameters (including intensity, frequency and quantity) are similar or lower than those of existing online, short-term, or medium-term stimulation protocols, in which case the respective procedures apply.</li>  
+    <li><b>* online:</b> these protocols rely on immediate excitatory and inhibitory mechanisms that have only instantaneous effects (≤1 sec). Examples: pulse or burst TUS protocols (≤1 sec).</li>
+    <li><b>* short-term:</b> these protocols rely on transient functional modulations of synaptic efficacy that have short-lasting effects (>1 sec, ≤3 hours). Examples: repetitive or patterned TUS (>1 sec).</li>
+    <li><b>* medium-term:</b> these protocols rely on slow but transient modulations of synaptic efficacy that have medium-term effects (>3 hours, ≤1 week). These protocols typically capitalize upon physiological mechanisms of plasticity with tailored parameters or aim to induce cumulative effects by repeating sessions.</li>
+    <li><b>* long-term:</b> these protocols rely on slow structural modulations of synaptic function <b>that have long-lasting effects (>1 week).**</b> These stimulation protocols always entail repeated sessions (e.g. daily) over a prolonged period (e.g. weeks) with typically high-quantity, high-intensity and/or high-frequency pulse delivery. </li>  
+    <li><b>* other:</b> these protocols do not meet any of the above criteria and/or the effects are*** not yet well-known. In general, the procedures for long-term stimulation protocols apply, except if all stimulation parameters (including intensity, frequency and quantity) are similar or lower than those of existing online, short-term, or medium-term stimulation protocols, in which case the respective procedures apply.</li>  
 </ul>
 
 <h3>4. Procedures</h3>
@@ -99,22 +98,22 @@
     The certified experimenter will decide upon inclusion or exclusion of the prospective participant. Unless otherwise stated, it is the norm that participants will be excluded from the session if they meet at least one of the following criteria: <br><br>
 </p>
 <ul>
-    <li>*Under 18 years of age</li>
-    <li>*Current or planned pregnancy</li>
-    <li>*A history or brain surgery or serious head trauma</li>
-    <li>*A history of or any close relatives (parents, siblings, children) with epilepsy, convulsion, or seizure</li>
-    <li>*Predisposition for fainting spells (syncope)</li>
-    <li>*A cardiac pacemaker or intra-cardiac lines</li>
-    <li>*An implanted neurostimulator</li>
-    <li>*Implanted medication infusion device</li>
-    <li>*Implanted metal devices or large ferromagnetic fragments in the head or upper body (excluding dental wire), or jewellery/piercing that cannot be removed</li>
-    <li>*Use of a medical plaster that cannot or may not be taken off (e.g., nicotine plaster)</li>
-    <li>*Cochlear implants</li>
-    <li>*Metal in the brain, skull, or elsewhere in your body (fragments, clips, etc.)</li>
-    <li>*Diagnosed neurological or psychiatric disorders</li>
-    <li>*Use of psychoactive (prescription) medication (excluding anti-conception)</li>
-    <li>*Skin disease at intended stimulation sites</li>
-    <li>*The consumption of more than four alcoholic units within 24 hours before participation or any recreational drugs within 48 hours before participation</li>    
+    <li>* Under 18 years of age</li>
+    <li>* Current or planned pregnancy</li>
+    <li>* A history or brain surgery or serious head trauma</li>
+    <li>* A history of or any close relatives (parents, siblings, children) with epilepsy, convulsion, or seizure</li>
+    <li>* Predisposition for fainting spells (syncope)</li>
+    <li>* A cardiac pacemaker or intra-cardiac lines</li>
+    <li>* An implanted neurostimulator</li>
+    <li>* Implanted medication infusion device</li>
+    <li>* Implanted metal devices or large ferromagnetic fragments in the head or upper body (excluding dental wire), or jewellery/piercing that cannot be removed</li>
+    <li>* Use of a medical plaster that cannot or may not be taken off (e.g., nicotine plaster)</li>
+    <li>* Cochlear implants</li>
+    <li>* Metal in the brain, skull, or elsewhere in your body (fragments, clips, etc.)</li>
+    <li>* Diagnosed neurological or psychiatric disorders</li>
+    <li>* Use of psychoactive (prescription) medication (excluding anti-conception)</li>
+    <li>* Skin disease at intended stimulation sites</li>
+    <li>* The consumption of more than four alcoholic units within 24 hours before participation or any recreational drugs within 48 hours before participation</li>    
 </ul>
 
 <h4><b>4.3. Monitoring adverse events</b></h4>
@@ -266,7 +265,7 @@ NIBS techniques can be safely combined with other NIBS and neuroimaging techniqu
 
 
 <b><i>Table 1.</i></b> <p>International guidelines relevant for (diagnostic) transcranial ultrasound</p>
-<img src="images/diagnosticTUS.png"/>
+<img width="750" src="images/diagnosticTUS.png"/>
 
 <p>
     *Guideline from the Food and Drug Administration (FDA); Guideline from the European MRI + EUREKA consortium (MRI radiofrequency exposure levels)<br><br>
