--- a/iTrusst/header.html
+++ b/iTrusst/header.html
@@ -13,7 +13,7 @@
                     <li><a href="wg_safety.html">Safety</a>
                         <ul>
                             <li><a href="wg_safety_bioeffects.html">Bioeffects</a></li>
-                            <li><a href="wg_safety_contraindications.html">Contraindications</a></li>
+                            <!--<li><a href="wg_safety_contraindications.html">Contraindications</a></li> -->
                         </ul>
                     </li>
                     <li><a href="wg_equipment.html">Equipment</a>
@@ -23,7 +23,7 @@
                     </li>
                     <li><a href="wg_practice.html">Practice</a>
                         <ul>
-                            <li><a href="wg_practice_example_documentation.html">Example documentation</a></li>
+                            <li><a href="wg_practice_example_documentation.html"> Operating procedure doc.</a></li>
                         </ul>
                     </li>
                     <li><a href="wg_open.html">Open</a></li>
@@ -32,9 +32,9 @@
                     
                 </ul>
             </li>
-            <li><a href="info.html">Info</a></li>
-<!--            <li><a href="news.html">News</a></li>-->
             <li><a href="people.html">People</a></li>
+            <li><a href="meetingmins.html">Meeting minutes</a></li>
+<!--            <li><a href="news.html">News</a></li>-->
             <li><a href="aboutus.html">About us</a></li>
             <li><a href="contact.html" class="button ">Contact</a></li>
         </ul>
