--- a/iTrusst/content_meetingmins.html
+++ b/iTrusst/content_meetingmins.html
@@ -3,34 +3,34 @@
     Below you can view the minutes recorded from the assorted ITRUSST plenary meetings. These minutes are not a word-for-word record, but contain the content of each entire meeting. Opinions expressed in the minutes do not necessarily reflect the consensus opinion of ITRUSST. This work is subject to a creative commons license (CC BY-NC-ND)
 </i>
 </div>
-<br>
+<br><br>
 <img src="images/cc.png"/>
 
 <p>This work is licensed under a  <a href="https://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a></p>
-<br><br>
+<br>
 
-<h3>table of contents</h3>
+<h3>Table of contents</h3>
 <ul>
     <li>
-        <a href="meeting_april22.html">April 21, 2022</a>
+        <a href="meeting_april22.html">* April 21, 2022</a>
     </li>
     <li>
-        <a href="meeting_june21.html">June 17, 2021</a>
+        <a href="meeting_june21.html">* June 17, 2021</a>
     </li>
 
     <li>
-        <a href="meeting_may21.html">May 20, 2021</a>
+        <a href="meeting_may21.html">* May 20, 2021</a>
     </li>
     <li>
-        <a href="meeting_april21.html">April 15, 2021</a>
+        <a href="meeting_april21.html">* April 15, 2021</a>
     </li>
     <li>
-        <a href="meeting_march21.html">March 18, 2021</a>
+        <a href="meeting_march21.html">* March 18, 2021</a>
     </li>
     <li>
-        <a href="meeting_feb21.html">February 18, 2021</a>
+        <a href="meeting_feb21.html">* February 18, 2021</a>
     </li>
     <li>
-        <a href="content_meeting_jan21.html">January 21, 2021</a>
+        <a href="meeting_jan21.html">* January 21, 2021</a>
     </li>
 </ul>
