--- a/iTrusst/content_wg_open.html
+++ b/iTrusst/content_wg_open.html
@@ -1,14 +1,14 @@
 <div  class="block blockgrey">
-    <i>
+    <h4>
     Purpose: To establish a clinical roadmap for transcranial ultrasonic stimulation, including guidelines for clinical trials but also a preclinical directions.
-    </i>
+    </h4>
 </div>
-
+<br><br>
 
 <div class="block blockorange">
-    <h3 style="color:white"> Chairmenship open working group</h3>
-    <b style="color:black"> Benjamin Kop (co-chair)</b><p style="color:white"> Donders Institute, Radboud University Nijmegen, the Netherlands</p><br>
-    <b style="color:black"> Tulika Nandi (co-chair)</b><p style="color:white"> Johannes Gutenberg University Medical Center Mainz, Germany</p>   
+    <h3 style="color:black"> Chairmenship open working group</h3>
+    <b style="color:#6a3297"> Benjamin Kop (co-chair)</b><p style="color:white"> Donders Institute, Radboud University Nijmegen, the Netherlands</p><br>
+    <b style="color:#6a3297"> Tulika Nandi (co-chair)</b><p style="color:white"> Johannes Gutenberg University Medical Center Mainz, Germany</p>   
 </div>
 
     
