--- a/iTrusst/wg_practice_example_documentation.html
+++ b/iTrusst/wg_practice_example_documentation.html
@@ -25,7 +25,7 @@
             <div id="main" class="wrapper style1">
                 <div class="container">
                     <header class="major">
-                        <h2>Working group: Practice - Example documentation</h2>
+                        <h2>Working group: Practice - Standard operating procedure documentation</h2>
                     </header>
 
                     <!-- Content -->
