--- a/iTrusst/content_meeting_jan21.html
+++ b/iTrusst/content_meeting_jan21.html
@@ -1,3 +1,5 @@
+<iframe width="420" height="237" src="https://www.youtube.com/embed/QzxxIPKvi5c" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe><br><br>
+
 <h3>Agenda</h3>
 <ul>
     <li>-   Organization-level considerations: name of consortium, consensus protocol, quorum</li>
