--- a/iTrusst/header.html
+++ b/iTrusst/header.html
@@ -27,14 +27,16 @@
                         </ul>
                     </li>
                     <li><a href="wg_open.html">Open</a></li>
-                    <li><a href="wg_clinical.html">Clinical</a></li>
-                    <li><a href="meetingmins.html">Meeting minutes</a></li>
-                    
+                    <li><a href="wg_clinical.html">Clinical</a></li>                   
+                </ul>
+            </li>
+            <li><a href="#">Meetings</a>
+                <ul>
+                    <li><a href="meeting_workshop.html">Educational Course 2021</a></li>
+                    <li><a href="meetingmins.html">Plenary meetings</a></li>
                 </ul>
             </li>
             <li><a href="people.html">People</a></li>
-            <li><a href="meetingmins.html">Meeting minutes</a></li>
-<!--            <li><a href="news.html">News</a></li>-->
             <li><a href="aboutus.html">About us</a></li>
             <li><a href="contact.html" class="button ">Contact</a></li>
         </ul>
