--- a/iTrusst/content_meeting_june21.html
+++ b/iTrusst/content_meeting_june21.html
@@ -1,3 +1,5 @@
+<iframe width="420" height="237" src="https://www.youtube.com/embed/ZpKzKgI4-8Y" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe><br><br>
+
 <h3>Agenda</h3>
 <ul>
     <li>-   news and announcements</li>
