--- a/iTrusst/content_meetingmins.html
+++ b/iTrusst/content_meetingmins.html
@@ -1,6 +1,6 @@
 <div  class="block blockgrey">
 <i>
-    Below you can view the minutes recorded from the assorted ITRUSST plenary meetings. These minutes are not a word-for-word record, but contain the content of each entire meeting. Opinions expressed in the minutes do not necessarily reflect the consensus opinion of ITRUSST. This work is subject to a creative commons license (CC BY-NC-ND)
+    Below you can view the minutes recorded from the assorted ITRUSST plenary meetings. These minutes are not a word-for-word record, but contain the content of each entire meeting. Opinions expressed in the minutes do not necessarily reflect the consensus opinion of ITRUSST. 
 </i>
 </div>
 <br><br>
@@ -12,25 +12,37 @@
 <h3>Table of contents</h3>
 <ul>
     <li>
-        <a href="meeting_april22.html">* April 21, 2022</a>
+        <a href="meeting_april22.html">* Minutes April, 2022</a>
     </li>
     <li>
-        <a href="meeting_june21.html">* June 17, 2021</a>
+        <a href="https://youtu.be/PPZjBxDPIN0">* Recording December, 2021</a>
+    </li>
+    <li>
+        <a href="https://youtu.be/uX9aE6HrkpM">* Recording November, 2021</a>
+    </li>
+    <li>
+        <a href="meeting_june21.html">* Minutes and recording June, 2021</a>
     </li>
 
     <li>
-        <a href="meeting_may21.html">* May 20, 2021</a>
+        <a href="meeting_may21.html">* Minutes and recording May, 2021</a>
     </li>
     <li>
-        <a href="meeting_april21.html">* April 15, 2021</a>
+        <a href="meeting_april21.html">* Minutes and recording April, 2021</a>
     </li>
     <li>
-        <a href="meeting_march21.html">* March 18, 2021</a>
+        <a href="meeting_march21.html">* Minutes and recording March, 2021</a>
     </li>
     <li>
-        <a href="meeting_feb21.html">* February 18, 2021</a>
+        <a href="meeting_feb21.html">* Minutes and recording February, 2021</a>
     </li>
     <li>
-        <a href="meeting_jan21.html">* January 21, 2021</a>
+        <a href="meeting_jan21.html">* Minutes and recording January, 2021</a>
+    </li>
+    <li>
+        <a href="https://youtu.be/MMlRiAzoXeg">* Recording December, 2020</a>
+    </li>
+    <li>
+        <a href="https://youtu.be/nWr2bUXshJk">* Recording November, 2020</a>
     </li>
 </ul>
