--- a/iTrusst/meeting_may21.html
+++ b/iTrusst/meeting_may21.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Workgroup - ITRUSTT</title>
+		<title>Meeting minutes May 20, 2021 - ITRUSST</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
         <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
