--- a/iTrusst/meetings_edu_course.html
+++ b/iTrusst/meetings_edu_course.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Meeting minutes January 21, 2021 - ITRUSST</title>
+		<title>ITRUSST Educational Course 2021 - ITRUSTT</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
         <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
@@ -25,7 +25,7 @@
             <div id="main" class="wrapper style1">
                 <div class="container">
                     <header class="major">
-                        <h2>Meeting minutes January 21, 2021</h2>
+                        <h2>ITRUSST Educational Course 2021</h2>
                     </header>
 
                     <!-- Content -->
@@ -56,7 +56,7 @@
                 jQuery.get('footer.html', function(footercode) {
                     document.getElementById("myFooter").innerHTML = footercode;
                 });
-                jQuery.get('content_meeting_jan21.html', function(contentcode) {
+                jQuery.get('content_recs_edu_course.html', function(contentcode) {
                     document.getElementById("myContent").innerHTML = contentcode;
                 });
             }
