--- a/iTrusst/header.html
+++ b/iTrusst/header.html
@@ -32,7 +32,7 @@
             </li>
             <li><a href="#">Meetings</a>
                 <ul>
-                    <li><a href="meeting_workshop.html">Educational Course 2021</a></li>
+                    <li><a href="meetings_edu_course.html">Educational Course 2021</a></li>
                     <li><a href="meetingmins.html">Plenary meetings</a></li>
                 </ul>
             </li>
