--- a/iTrusst/content_index.html
+++ b/iTrusst/content_index.html
@@ -62,7 +62,7 @@
         <li>
             <!-- The overview button -->
             <a class="profile" href="wg_practice.html">
-                <img alt="Profile shot" src="images/practice.jpg" />
+                <img alt="Profile shot" src="images/practice2.jpg" />
                 <h2 class="gallerybutton">Practice</h2>
             </a>
         </li>
@@ -84,7 +84,7 @@
         <li>
             <!-- The overview button -->
             <a class="profile" href="wg_clinical.html">
-                <img alt="Profile shot" src="images/clinical.jpg" />
+                <img alt="Profile shot" src="images/clinical3.jpg" />
                 <h2 class="profile__name gallerybutton">Clinical</h2>
             </a>
         </li>
