--- a/iTrusst/content_index copy.html
+++ b/iTrusst/content_index copy.html
@@ -18,7 +18,7 @@
         <li>
             <!-- The overview button -->
             <a class="profile" href="wg_planning.html">
-                <img alt="Profile shot" src="images/planning.jpg" />
+                <img alt="Profile shot" src="images/planning3_purple.png" />
                 <h2 class="profile__name gallerybutton">Planning</h2>
             </a>
         </li>
@@ -29,7 +29,7 @@
         <li>
             <!-- The overview button -->
             <a class="profile" href="wg_reporting.html">
-                <img alt="Profile shot" src="images/reporting.jpg" />
+                <img alt="Profile shot" src="images/reporting3.png" />
                 <h2 class="profile__name gallerybutton">Reporting</h2>
             </a>
         </li>
@@ -51,7 +51,7 @@
         <li>
             <!-- The overview button -->
             <a class="profile" href="wg_equipment.html">
-                <img alt="Profile shot" src="images/equipment.jpg" title ="cc-BY Thomas_Manuel" >
+                <img alt="Profile shot" src="images/equipment_Thomas_Manuel4.png" title ="cc-BY Thomas_Manuel" >
                 <h2 class="profile__name gallerybutton">Equipment</h2>
             </a>
         </li>
@@ -62,7 +62,7 @@
         <li>
             <!-- The overview button -->
             <a class="profile" href="wg_practice.html">
-                <img alt="Profile shot" src="images/practice.jpg" />
+                <img alt="Profile shot" src="images/practice3.jpg" />
                 <h2 class="gallerybutton">Practice</h2>
             </a>
         </li>
@@ -84,7 +84,7 @@
         <li>
             <!-- The overview button -->
             <a class="profile" href="wg_clinical.html">
-                <img alt="Profile shot" src="images/clinical.jpg" />
+                <img alt="Profile shot" src="images/clinical2.png" />
                 <h2 class="profile__name gallerybutton">Clinical</h2>
             </a>
         </li>
