--- a/iTrusst/index.html
+++ b/iTrusst/index.html
@@ -56,7 +56,7 @@
                 jQuery.get('footer.html', function(footercode) {
                     document.getElementById("myFooter").innerHTML = footercode;
                 });
-                jQuery.get('content_index.html', function(contentcode) {
+                jQuery.get('content_index copy.html', function(contentcode) {
                     document.getElementById("myContent").innerHTML = contentcode;
                 });
             }
