--- a/iTrusst/content_index copy.html
+++ b/iTrusst/content_index copy.html
@@ -40,7 +40,7 @@
         <li>
             <!-- The overview button -->
             <a class="profile" href="wg_safety.html">
-                <img alt="Profile shot" src="images/safety.jpg" />
+                <img alt="Profile shot" src="images/safety2.png" />
                 <h2 class="profile__name gallerybutton">Safety</h2>
             </a>
         </li>
