--- a/iTrusst/content_index.html
+++ b/iTrusst/content_index.html
@@ -73,7 +73,7 @@
         <li>
             <!-- The overview button -->
             <a class="profile" href="wg_open.html">
-                <img alt="Profile shot" src="images/open2.jpg" />
+                <img alt="Profile shot" src="images/open.jpg" />
                 <h2 class="profile__name gallerybutton">Open</h2>
             </a>
         </li>
