--- a/iTrusst/content_meetingmins.html
+++ b/iTrusst/content_meetingmins.html
@@ -1,7 +1,13 @@
+<header style="align-content: center" color = "white">
+    <a href="webcal://p51-caldav.icloud.com/published/2/MjU1MDkzMDU5ODIyNTUwOaz1O5ShprdkIrwa2VtcuWaoLAB7QqzbnAvpRLdpn6L_OLW9HTmd0VoJ7Rvz47dNXAXZNH9uzn8JNhLOJa76N4A " class="button"> Import here all upcoming ITRUSST plenary meetings in your calendar!</a><br>
+    <i>*Watch emails from ITRUSST to receive the web conference link</i>
+</header>
+<br><br>
+
 <div  class="block blockgrey">
-<i>
+<h4>
     Below you can view the minutes recorded from the assorted ITRUSST plenary meetings. These minutes are not a word-for-word record, but contain the content of each entire meeting. Opinions expressed in the minutes do not necessarily reflect the consensus opinion of ITRUSST. 
-</i>
+</h4>
 </div>
 <br><br>
 <img src="images/cc.png"/>
@@ -9,7 +15,7 @@
 <p>This work is licensed under a  <a href="https://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a></p>
 <br>
 
-<h3>Table of contents</h3>
+<h3>Previous meetings</h3>
 <ul>
     <li>
         <a href="meeting_april22.html">* Minutes April, 2022</a>
@@ -46,3 +52,4 @@
         <a href="https://youtu.be/nWr2bUXshJk">* Recording November, 2020</a>
     </li>
 </ul>
+
