--- a/iTrusst/content_meetingmins.html
+++ b/iTrusst/content_meetingmins.html
@@ -1,7 +1,4 @@
-<header style="align-content: center" color = "white">
-    <a href="webcal://p51-caldav.icloud.com/published/2/MjU1MDkzMDU5ODIyNTUwOaz1O5ShprdkIrwa2VtcuWaoLAB7QqzbnAvpRLdpn6L_OLW9HTmd0VoJ7Rvz47dNXAXZNH9uzn8JNhLOJa76N4A " class="button"> Import here all upcoming ITRUSST plenary meetings in your calendar!</a><br>
-    <i>*Watch emails from ITRUSST to receive the web conference link</i>
-</header>
+<a href="webcal://p51-caldav.icloud.com/published/2/MjU1MDkzMDU5ODIyNTUwOaz1O5ShprdkIrwa2VtcuWaoLAB7QqzbnAvpRLdpn6L_OLW9HTmd0VoJ7Rvz47dNXAXZNH9uzn8JNhLOJa76N4A " class="button" style="align-content: center"> Click here to import all upcoming ITRUSST plenary meetings in your calendar!</a><br> <i style="align-content: center">*Watch emails from ITRUSST to receive the web conference link or become an observer by <a href="itrusst.info@gmail.com"> emailing us</a></i>
 <br><br>
 
 <div  class="block blockgrey">
