--- a/iTrusst/content_recs_edu_course.html
+++ b/iTrusst/content_recs_edu_course.html
@@ -9,32 +9,49 @@
 <p>This work is licensed under a  <a href="https://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a></p>
 <br>
 
-<h3>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;1. Fundamentals of Neurophysiology &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp; 2. Basic Ultrasound Physics</h3>
+<h3>1. Fundamentals of Neurophysiology</h3>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/g9fWbqZjeXs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<br><br>
 
+<h3>2. Basic Ultrasound Physics</h3>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/iFih9ZpH5dc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <br><br>
 
-<h3>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;3. Transducers and Measurements &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;4. Physical Mechanisms of Ultrasound Interactions</h3>
+<h3>3. Transducers and Measurements</h3>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/2ETz2hK3KUs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<br><br>
+
+<h3>4. Physical Mechanisms of Ultrasound Interactions</h3>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/dzhLdI52X4E" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <br><br>
 
-<h3>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;5. Simulation &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;6. Image Guidance for Transcranial Focused Ultrasound</h3>
+<h3>5. Simulation</h3>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/jPHZ1KIr5Ww" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<br><br>
+
+<h3>6. Image Guidance for Transcranial Focused Ultrasound</h3>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/FttrVP76n8k" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <br><br>
 
-<h3>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;7. Safety &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;8. Study Design, Confounds, and Considerations</h3>
+<h3>7. Safety</h3>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/bF6tBjATfyE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<br><br>
+
+
+<h3>8. Study Design, Confounds, and Considerations</h3>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/vc0O3i-Kz3Q" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <br><br>
 
-<h3>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;9. Biomechanisms &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;10. Neuromodulatory Effects</h3>
+<h3>9. Biomechanisms </h3>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/sZd_Oli3tz4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<br><br>
+
+<h3>10. Neuromodulatory Effects</h3>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/j8a8wrKB-5I" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <br><br>
 
-<h3>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;11. TUS - Stimulate and Measure &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;12. TUS - Stimulate and Measure with MR</h3>
+<h3>11. TUS - Stimulate and Measure</h3>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/5BTQ2Qc8hws" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+<h3>12. TUS - Stimulate and Measure with MR</h3>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/vwbiC5ZHEvM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
