--- a/iTrusst/content_contact.html
+++ b/iTrusst/content_contact.html
@@ -7,7 +7,7 @@
             <br><br>
         </p>
 
-        <h3>Adress</h3>
+        <h3>Address</h3>
         <p>Donders Centre for Cognition<br>
             Montessorilaan 3<br>
             6525 HR Nijmegen<br>
