--- a/iTrusst/content_meetingmins.html
+++ b/iTrusst/content_meetingmins.html
@@ -15,13 +15,19 @@
 <h3>Previous meetings</h3>
 <ul>
     <li>
-        <a href="meeting_april22.html">* Minutes April, 2022</a>
+        <a href="meeting_april22.html">* Minutes and recording April, 2022</a>
     </li>
     <li>
-        <a href="https://youtu.be/PPZjBxDPIN0">* Recording December, 2021</a>
+        <a href="meeting_march22.html">* Recording March, 2022</a>
     </li>
     <li>
-        <a href="https://youtu.be/uX9aE6HrkpM">* Recording November, 2021</a>
+        <a href="meeting_feb22.html">* Recording February, 2022</a>
+    </li>
+    <li>
+        <a href="meeting_dec21.html">* Recording December, 2021</a>
+    </li>
+    <li>
+        <a href="meeting_nov21.html">* Recording November, 2021</a>
     </li>
     <li>
         <a href="meeting_june21.html">* Minutes and recording June, 2021</a>
@@ -43,10 +49,10 @@
         <a href="meeting_jan21.html">* Minutes and recording January, 2021</a>
     </li>
     <li>
-        <a href="https://youtu.be/MMlRiAzoXeg">* Recording December, 2020</a>
+        <a href="meeting_dec20.html">* Recording December, 2020</a>
     </li>
     <li>
-        <a href="https://youtu.be/nWr2bUXshJk">* Recording November, 2020</a>
+        <a href="meeting_nov20.html">* Recording November, 2020</a>
     </li>
 </ul>
 
